src/components/Layout/NavigationBar.scss
.navbar {
  .navbar-brand-image {
    height: 35px;
    padding: 0;
  }
}

