fix: make navbar scrollalble on mobile

--- a/src/components/Layout/NavigationBar.scss
+++ b/src/components/Layout/NavigationBar.scss
@@ -4,3 +4,9 @@
     padding: 0;
   }
 }
+
+.navbar-scroll {
+  white-space: nowrap;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+}
